--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <!-- Navigation -->
         <div class="flex flex-wrap gap-2">
           <button class="px-4 py-2 rounded-lg bg-[#e6e2d8] text-[#4a5d23] hover:bg-[#dcd6c6] transition">
-            🏠 Home
+             Home
           </button>
           <button class="px-4 py-2 rounded-lg bg-[#e6e2d8] text-[#4a5d23] hover:bg-[#dcd6c6] transition">
-            👥 Members
+             Members
           </button>
           <button class="px-4 py-2 rounded-lg bg-[#6b8e23] text-white font-semibold">
-            ➕ Add Expense
+             Add Expense
           </button>
           <button class="px-4 py-2 rounded-lg bg-[#e6e2d8] text-[#4a5d23] hover:bg-[#dcd6c6] transition">
-            🧮 Split Calculator
+            Split Calculator
           </button>
           <button class="px-4 py-2 rounded-lg bg-[#e6e2d8] text-[#4a5d23] hover:bg-[#dcd6c6] transition">
-            💳 Balances
+             Balances
           </button>
           <button class="px-4 py-2 rounded-lg bg-[#e6e2d8] text-[#4a5d23] hover:bg-[#dcd6c6] transition">
-            📊 History
+             History
           </button>
         </div>
 
